--- a/templates/landing/signup.html
+++ b/templates/landing/signup.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col s12">
       <h3>Feedback</h3>
-      <form action="" method="post">{% csrf_token %}
+      <form action="" method="POST">{% csrf_token %}
         {{ form.as_p }}
         <button class="btn waves-effect waves-light" type="submit" name="action">Submit
           <i class="mdi-content-send right"></i>
