Added default sender

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <div class="row">
           <div class="col s9"><a href="{% url 'signup' %}"><h3>HOME</h3></a></div>
           <div class="col s3">
-            <button data-target="feedback-modal" class="waves-effect waves-light btn modal-trigger">Sign Up</button>
+            <button data-target="signup-modal" class="waves-effect waves-light btn modal-trigger">Sign Up</button>
           </div>
         </div>
         <div>
